
06-June-2010 Jean-Marie Simonet
# [#20853] Sorting by author in Category list. Thanks Phil.
# [#20861] plg_user_joomla missing language declaration in manifest. 
# [#20858] Administrator Editor Media Dialog modal-box height requires scrolling  Thansk Bill.and Ofer.
# [#20843] wrong constant specified for error message in controllerform.php - missing language key. Thanks Bill and Nikolai. + some

05-June-2010 Jean-Marie Simonet
# [#20846] Corrected strings for contact creator. Thanks Elin.
# [#20815] When a contact is created automatically via contact creator plugin. Thanks Radek and Phil.
#$ Corrected wrong sprintf
# [#20484] Requested for joomla.json download after uploading image. Thanks John.
# [#20321] Email functions not working properly. Partly fixed only.
 
04-June-2010 Jean-Marie Simonet
# [#20768] It is possible to create a single-contact menu entry without selecting a contact. Thanks Artyom and Phil.
$ Added missing string

03-June-2010 Jean-Marie Simonet
# [#20744] Logout link in administrator panel isn't logout when editing content. Thanks Andrew.
$ Missing strings
# [#20768] It is possible to create a single-contact menu entry without selecting a contact. Thanks Amy.
# [#20761] Unclear how to select contact for single contact menu item. Thanks Elin.
# [#20603] Error while trying to use PageBreak from frontend. Thanks Bill.

03-June-2010 Christophe Demko
 # Fixed issue [#20813] Value Not Found for blank user field (bill richardson, Peter Osipof)
 # Fixed issue [#20591] Cannot delete all usergroups from an access level (Robert Flodstrom)
 # Fixed issue [#20825] [patch] Debug plug-in doesn't output well formed code (Rouven Weßling)
 # Fixed issue [#20697] Uninstalling a component does not remove menu items of that component type
 # UI enhancement for com_menus
 # Fixed issue [#20805] Module linked to menu links (Aytug AKAR, Nikolai Plath, bill richardson)
 # Fixed issue [#20820] menu create - single contact typo error (bill richardson)