@@ -713,16 +713,19 @@ JLIB_FORM_ERROR_XML_FILE_DID_NOT_LOAD="XML file did not load"
 JLIB_FORM_CHANGE_IMAGE="Change image"
 JLIB_FORM_CHANGE_IMAGE_BUTTON="Change Image Button"
 JLIB_FORM_VALUE_CACHE_APC="Alternative PHP Cache"
+JLIB_FORM_VALUE_CACHE_CACHELITE="Cache_Lite"
 JLIB_FORM_VALUE_CACHE_EACCELERATOR="eAccelerator"
 JLIB_FORM_VALUE_CACHE_FILE="File"
 JLIB_FORM_VALUE_CACHE_MEMCACHE="Memcache"
 JLIB_FORM_VALUE_CACHE_XCACHE="XCache"
+JLIB_FORM_VALUE_CACHE_WINCACHE="Windows Cache"
 JLIB_FORM_VALUE_SESSION_APC="Alternative PHP Cache"
 JLIB_FORM_VALUE_SESSION_DATABASE="Database"
 JLIB_FORM_VALUE_SESSION_EACCELERATOR="eAccelerator"
 JLIB_FORM_VALUE_SESSION_MEMCACHE="Memcache"
 JLIB_FORM_VALUE_SESSION_NONE="None"
 JLIB_FORM_VALUE_SESSION_XCACHE="XCache"
+JLIB_FORM_VALUE_SESSION_WINCACHE="Windows Cache"
 JLIB_FORM_VALUE_TIMEZONE_UTC="Universal Time, Coordinated (UTC)"
 JLIB_FORM_SELECT_USER="Select a User"
 JLIB_FORM_CHANGE_USER="Change User"
